Fixed many bugs Refactoring: Created ParenthesesNode and it vesrion of evaluate method.